--- a/templates/members.html
+++ b/templates/members.html
@@ -202,10 +202,10 @@
           
           
       </td>
-      <td> <button type="button" class="custom-button"  data-bs-toggle="modal" data-bs-target="#viewModal{{loop.index}}" id="view">view</button> 
+      <td id="buttons"> <button type="button" class="custom-button"  data-bs-toggle="modal" data-bs-target="#viewModal{{loop.index}}" id="view">view</button> 
          <button type="button" class="custom-button"  data-bs-toggle="modal" data-bs-target="#edit{{loop.index}}" id="edit" >Edit</button> 
           <button type="button" class="custom-button"  data-bs-toggle="modal" data-bs-target="#delete{{loop.index}}" id="delete" >Delete</button>
-        
+          <button type="button" class="custom-button"  data-bs-toggle="modal" data-bs-target="#deletem{{loop.index}}" id="delete" >Delete Membership</button>
           
           <!-- Modal view -->
           <div class="modal fade" id="viewModal{{loop.index}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -405,7 +405,35 @@
         
         <form action="/members" method="post" id="myForm">
           <input type="hidden" name="cl_id" value="{{m.cl_id}}">
-          <input type="hidden" name="form_id" value="form3">
+          <input type="hidden" name="form_id" value="form3cl">
+        
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="submit" class="btn btn-primary">Delete</button>
+      </form>
+    </div>
+    </div>
+  </div>
+</div>
+ <!--model delete membership-->
+ <div class="modal fade" id="deletem{{loop.index}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Delete {{m.cl_Fname}} {{m.cl_Lname}} number:{{m.cl_num}}</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+          
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="alert alert-warning" role="alert">
+          Are you sure you want to delete this Membership ?
+        </div>
+        
+        <form action="/members" method="post" id="myForm">
+          <input type="hidden" name="cl_id" value="{{m.cl_id}}">
+          <input type="hidden" name="form_id" value="form3m">
         
       </div>
       <div class="modal-footer">
@@ -519,10 +547,11 @@
   </div>
 
       </td>
-        <td> <button type="button" class="custom-button" data-bs-toggle="modal" data-bs-target="#view{{loop.index}}" id="view">view</button> 
+        <td > <span id="no_m_buttons"><button type="button" class="custom-button" data-bs-toggle="modal" data-bs-target="#view{{loop.index}}" id="view">view</button> 
            <button type="button" class="custom-button" data-bs-toggle="modal" data-bs-target="#editc{{loop.index}}" id="edit" >Edit</button> 
-            <button type="button" id="delete" class="custom-button" data-bs-toggle="modal" data-bs-target="#delete{{loop.index}}">Delete</button>
-        <!--modal view-->
+            <button type="button" id="delete" class="custom-button" data-bs-toggle="modal" data-bs-target="#deletecl{{loop.index}}">Delete</button>
+          </span>
+            <!--modal view-->
 
 
             <div class="modal fade" id="view{{loop.index}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -634,7 +663,7 @@
         
         
            <!--model delete-->
-           <div class="modal fade" id="delete{{loop.index}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+           <div class="modal fade" id="deletecl{{loop.index}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
@@ -650,7 +679,7 @@
                   
                   <form action="/members" method="post" id="myForm">
                     <input type="hidden" name="cl_id" value="{{client.cl_id}}">
-                    <input type="hidden" name="form_id" value="form3">
+                    <input type="hidden" name="form_id" value="form3cl">
                   
                 </div>
                 <div class="modal-footer">
@@ -661,6 +690,7 @@
               </div>
             </div>
           </div>
+          
              
       </td>
         </tr>
