--- a/static/styles.css
+++ b/static/styles.css
@@ -176,3 +176,61 @@ span > ul
     margin-left:-30.5%;
     
 }
+#schedule, table[id="schedule"] td, table[id="schedule"] th
+{
+    border-collapse: collapse;
+    
+}   
+#schedule
+{
+    float:right;
+    margin-right:5%;
+    width:90%;
+    height:100%;
+}
+
+
+table[id="schedule"] td, table[id="schedule"] th
+{
+    width: 14.2857%;
+    border: 1px solid #ccc;
+    
+}
+table[id="schedule"] td
+{
+    height:150px;
+}
+.date
+{
+    text-align: right;
+    float:right;
+    width:30%;
+    /*border:solid black;*/
+    margin-bottom:100%;
+    
+    
+}
+#events
+{
+    
+    width:100%;
+    /*border:solid black;*/
+    margin-left:0%;
+    padding-left:0%;
+    margin-top: 30%;
+    padding-top: 0%;
+}
+ul[id="events"] li
+{
+    /*border:solid black;*/
+    width:100%;
+    text-align: left;
+}
+a{
+    text-decoration: none;
+    color:hsl(0, 0%, 100%);
+}
+a:hover 
+{
+    color:rgb(0, 213, 255);
+}
