--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,15 +13,31 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
+        <script>
+            function toggleInput() {
+    var choice = document.getElementById("choice").value;
+    var inputContainer = document.getElementById("inputContainer");
+    var inputField = document.getElementById("inputField");
 
+    if (choice === "show") {
+        inputContainer.style.display = "block";
+        inputField.required = true;
+    } else {
+        inputContainer.style.display = "none";
+        inputField.required = false;
+    }
+}
+
+        </script>
         <!-- https://favicon.io/emoji-favicons/money-bag/ -->
         <link href="/static/favicon.ico" rel="icon">
 
         <link href="/static/styles.css" rel="stylesheet">
 
         <title>Elite Gym: {% block title %}{% endblock %}</title>
-
+       
     </head>
+   
 
     <body>
 
