adding the events in the schedule

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             <tbody>
               
               <tr>
-              <td> </td>
+              <td>{{days}}</td>
               <td> </td>
               <td> </td>
               <td> </td>
