--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -40,8 +40,9 @@
         <th>Saturday</th>
         <th>Sunday</th>
     </tr>
-    
+   
     {% for week in cal %}
+   
     
    
         <tr>
@@ -56,9 +57,11 @@
                         <div class="date">{{ day }}</div>
                         
                         <ul id="events">
-                            {% for date,event in events.items() %}
+                            {% for date,event in current_events.items() %}
                                 {% if date == '%04d-%02d-%02d' % (year,month,day) %}
-                                <li>{{event}}</li>
+                                    {% for info in event %}    
+                                        <li>{{info}}</li>
+                                    {% endfor %}
                                 
                                 {% endif %}
                                 
@@ -72,21 +75,22 @@
                             <div class="modal-content">
                               <div class="modal-header">
                                 <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                  <span aria-hidden="true">&times;</span>
+                                <button type="button"  class="btn-close" data-dismiss="modal" aria-label="Close">
+                                  
                                 </button>
                               </div>
                               <div class="modal-body">
                                 <table  width="100%" id="event">
-                                    <form action="/schedule" method="post" id="myForm">
+                                    <form action="/schedule/{{year}}/{{month}}" method="post" id="myForm">
                                       <input type="hidden" name="form_id" value="formsch">
+                                      <input type="hidden" name="event_date" value="{{'%04d-%02d-%02d' % (year,month,day)}}">
                                      
                                       <tr>
                                         <td colspan="2">
                                           
                                       <div class="mb-3">
                                         <label for="selectOption" id="label">Select a Sport:</label>
-                                        <select class="form-control" id="sp_name" name="sp_name" >
+                                        <select class="form-control" id="sp_name" name="sp_name" required>
                                           <option value="">˅</option>
                                           {% for s in sport %}
                                           
@@ -100,19 +104,19 @@
                                             <td >
                                             <div class="mb-3">
                                               <label>Begin Hour <input autocomplete="off" autofocus class="form-control mx-auto w-auto" 
-                                                id="starts_at" name="starts_at" placeholder="Begin Hour" type="time" ></label> 
+                                                id="starts_at" name="starts_at" placeholder="Begin Hour" type="time" required></label> 
                                             </div>
                                         </td>
                                         <td>
                                             <div class="mb-3">
                                                 <label>End Hour <input autocomplete="off" autofocus class="form-control mx-auto w-auto" 
-                                                  id="ends_at" name="ends_at" placeholder="End Hour" type="time" ></label> 
+                                                id="ends_at" name="ends_at" placeholder="End Hour" type="time" required></label> 
                                               </div>
 
                                         </td>
                                         </tr>
                                         <tr><td colspan="2"><label for="choice">Repeating Pattern:</label>
-                                            <select id="choice"  class="form-control" >
+                                            <select id="choice" name="repeat_pattern"  class="form-control" >
                                                 <option value="irregular">Irregular</option>
                                                 <option value="weekly">Weekly</option>
                                                 <option value="daily">Daily</option>
@@ -123,35 +127,35 @@
                                                 <label for="inputField">Days of week:</label>
                                                 <br>
                                                 <label>
-                                                    <input type="checkbox" name="days" value="Monday">
+                                                    <input type="checkbox" name="days[]" value="0">
                                                     Monday
                                                 </label>
                                                 
                                                 <label>
-                                                    <input type="checkbox" name="days" value="Tuesday">
+                                                    <input type="checkbox" name="days[]" value="1">
                                                     Tuesday
                                                 </label>
                                                 <br>
                                                 <label>
-                                                    <input type="checkbox" name="days" value="Wednesday">
+                                                    <input type="checkbox" name="days[]" value="2">
                                                     Wednesday
                                                 </label>
                                                 
                                                 <label>
-                                                    <input type="checkbox" name="days" value="Thursday">
+                                                    <input type="checkbox" name="days[]" value="3">
                                                     Thursday
                                                 </label>
                                                 <br>
                                                 <label>
-                                                    <input type="checkbox" name="days" value="Friday">
+                                                    <input type="checkbox" name="days[]" value="4">
                                                     Friday
                                                 </label>
                                                 <label>
-                                                    <input type="checkbox" name="days" value="Saturday">
+                                                    <input type="checkbox" name="days[]" value="5">
                                                     Saturday
                                                 </label>
                                                 <label>
-                                                    <input type="checkbox" name="days" value="Sunday">
+                                                    <input type="checkbox" name="days[]" value="6">
                                                     Sunday
                                                 </label>
                                             </div></td></tr>
@@ -171,14 +175,15 @@
                                             </tr>
                                   
                                
-                                    </form>
+                                    
                                 </table>
                                 
                               </div>
                               <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
-                              </div>
+                                <button type="submit" class="btn btn-primary">Add</button>
+                            </form> 
+                            </div>
                             </div>
                           </div>
                     </div>
