adding some comments and fixing the event apparence

--- a/static/styles.css
+++ b/static/styles.css
@@ -241,8 +241,8 @@ a:hover
 #schedule_button
 {
     float: none;
-    width:110%;
-    height:118%;
+    width:50em;
+    height:50em;
     border: none;  
 
 
