--- a/static/styles.css
+++ b/static/styles.css
@@ -184,7 +184,8 @@ span > ul
 #schedule
 {
     float:right;
-    margin-right:5%;
+    margin-right:3%;
+    margin-top:2%;
     width:90%;
     height:100%;
 }
@@ -229,6 +230,8 @@ ul[id="events"] li
     /*border:solid black;*/
     width:100%;
     text-align: left;
+    padding-left:7px;
+    margin-top:-20%;
 }
 a{
     text-decoration: none;
@@ -241,8 +244,13 @@ a:hover
 #schedule_button
 {
     float: none;
-    width:50em;
-    height:50em;
+    width:10em;
+    height:12em;
+    padding: 0 0;
+    margin-top:-10%;
+    margin-bottom:-10%;
+    margin-right:-50%;
+    margin-left:-40%;
     border: none;  
 
 
@@ -261,4 +269,13 @@ a:hover
 {
     background-color: white;
    
+}
+ul[id="events"] 
+{
+    padding-left: 0%;
+    
+    /*border: solid black;*/
+}
+.btn-group{
+    margin-top:15px;
 }
