--- a/static/styles.css
+++ b/static/styles.css
@@ -231,7 +231,8 @@ ul[id="events"] li
     width:100%;
     text-align: left;
     padding-left:7px;
-    margin-top:-20%;
+    padding-top:0;
+    margin-top:0%;
 }
 a{
     text-decoration: none;
@@ -245,7 +246,7 @@ a:hover
 {
     float: none;
     width:10em;
-    height:12em;
+    height:13em;
     padding: 0 0;
     margin-top:-10%;
     margin-bottom:-10%;
@@ -273,6 +274,7 @@ a:hover
 ul[id="events"] 
 {
     padding-left: 0%;
+    padding-bottom:100%;
     
     /*border: solid black;*/
 }
