--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -36,6 +36,7 @@
                     </tr>
                   </thead>
                   <tbody>
+                    <!--iterating of the events-->
 
                         {% for event in events %}
                         <tr>
@@ -43,9 +44,145 @@
                             <td>{{event.starts_at}}</td>
                             <td>{{event.ends_at}}</td>
                             <td>{{event.repeat_pattern}}</td>
-                            <td>{{event.days}}</td>
+                            <td>{{event.days_output}}</td>
                             <td>{{event.start_date}}</td>
                             <td>{{event.end_date}}</td>
+                            <!--edit-->
+                            <td>
+                                <button type="button" class="custom-button"  data-bs-toggle="modal" data-bs-target="#edit{{loop.index}}" id="edit" >Edit</button> 
+                                <button type="button" class="custom-button"  data-bs-toggle="modal" data-bs-target="#delete{{loop.index}}" id="delete" >Delete</button>
+                            <!-- Modal edit-->
+                    <div class="modal fade" id="edit{{loop.index}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                        <!-- Modal edit -->
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLongTitle">Edit {{event.sp_name}}</h5>
+                                <button type="button"  class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                                  
+                                </button>
+                              </div>
+                              <div class="modal-body">
+                                <table  width="100%" id="event">
+                                    <form action="/schedule/{{year}}/{{month}}" method="post" id="myForm">
+                                      <input type="hidden" name="form_id" value="formsch-edit">
+                                      <input type="hidden" name="sc_id" value="{{event.sc_id}}">
+                                     
+                                      <tr>
+                                        <td colspan="2">
+                                          
+                                      <div class="mb-3">
+                                        <label for="selectOption" id="label">Select a Sport:</label>
+                                        <select class="form-control" id="sp_name" name="sp_name" value="{{event.sp_id}}">
+                                          <option value="">˅</option>
+                                          {% for s in sport %}
+                                          
+                                          <option value="{{s.sp_id}}" >{{s.sp_name}}</option>
+                                          {% endfor %}
+                                        </select>
+                                      </div>
+                                    </td>
+                                        </tr>
+                                         <tr >
+                                            <td >
+                                            <div class="mb-3">
+                                              <label>Starting Time <input autocomplete="off" autofocus class="form-control mx-auto w-auto" 
+                                                id="starts_at" name="starts_at" placeholder="Begin Hour" type="time" value=""></label> 
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <div class="mb-3">
+                                                <label>Ending Time<input autocomplete="off" autofocus class="form-control mx-auto w-auto" 
+                                                id="ends_at" name="ends_at" placeholder="End Hour" type="time" value=""></label> 
+                                              </div>
+
+                                        </td>
+                                        </tr>
+                                        <tr><td colspan="2"><label for="choice">Repeating Pattern:</label>
+                                            <select id="choice" name="repeat_pattern"  class="form-control" >
+                                                <option value="{{event.repeat_pattern}}">˅</option>
+                                                <option value="irregular">Irregular</option>
+                                                <option value="weekly">Weekly</option>
+                                                <option value="daily">Daily</option>
+                                                
+                                            </select>
+                                            <br>
+                                            <div id="inputContainer">
+                                                <label for="inputField">Days of week:</label>
+                                                <br>
+                                                <!--making the default values checked-->
+                                                {% for i in range(7) %}
+                                                    {% if  i | string in event.days %}
+                                                    <label>
+                                                        <input type="checkbox" name="days[]" value="{{i}}" checked>
+                                                        {{week_days[i]}}
+                                                    </label>
+                                                    {% else %}
+                                                    <label>
+                                                        <input type="checkbox" name="days[]" value="{{i}}" >
+                                                        {{week_days[i]}}
+                                                    </label>
+                                                    {% endif %}
+                                                {% endfor %}
+                                             
+                                            </div></td></tr>
+                                            <tr>
+                                                <td>   
+                                                <div class="mb-3">
+                                                    <label>Start Date <input autocomplete="off" autofocus class="form-control mx-auto w-auto" 
+                                                        id="m_type" name="start_date" placeholder="Start Date" type="date" value="{{event.start_date}}"></label> 
+                                                </div>
+                                            </td>
+                                                <td>
+                                                    <div class="mb-3">
+                                                        <label>End Date <input autocomplete="off" autofocus class="form-control mx-auto w-auto" 
+                                                            id="m_type" name="end_date" placeholder="End Date" type="date" value="{{event.end_date}}"></label> 
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                  
+                               
+                                    
+                                </table>
+                                
+                              </div>
+                              <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-primary">Edit</button>
+                            </form> 
+                            </div>
+                            </div>
+                          </div>
+                    </div>
+                    <!--model delete event-->
+ <div class="modal fade" id="delete{{loop.index}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Delete {{event.sp_name[0].sp_name}} </h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+            
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="alert alert-warning" role="alert">
+            Are you sure you want to delete this event ?
+          </div>
+          
+          <form action="/schedule/{{year}}/{{month}}" method="post" id="myForm">
+            <input type="hidden" name="form_id" value="formsch-delete">
+            <input type="hidden" name="sc_id" value="{{event.sc_id}}">
+          
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Delete</button>
+        </form>
+      </div>
+      </div>
+    </div>
+  </div>
+                            </td>
                         </tr>
                         {% endfor %}
                   </tbody>
@@ -107,11 +244,12 @@
                         <div class="date">{{ day }}</div>
                         
                         <ul id="events">
-                            {% for date,event in current_events.items() %}
-                                {% if date == '%04d-%02d-%02d' % (year,month,day) %}
+                            
+                            {% for event in current_events.values() %}
+                                {% if event[0] == '%04d-%02d-%02d' % (year,month,day) %}
                                       
-                                        <li>{{event[0]}} : {{event[1]}}-{{event[2]}}</li>
-                                        
+                                        <li>{{event[1]}} : {{event[2]}}-{{event[3]}}</li>
+                                       
                                     
                                 
                                 {% endif %}
@@ -134,7 +272,7 @@
                               <div class="modal-body">
                                 <table  width="100%" id="event">
                                     <form action="/schedule/{{year}}/{{month}}" method="post" id="myForm">
-                                      <input type="hidden" name="form_id" value="formsch">
+                                      <input type="hidden" name="form_id" value="formsch-add">
                                       <input type="hidden" name="event_date" value="{{'%04d-%02d-%02d' % (year,month,day)}}">
                                      
                                       <tr>
