--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,10 +35,11 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/schedule">Schedule</a></li>
                             <li class="nav-item"><a class="nav-link" href="/members">Members</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/trainers">Trainers</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/history">Sport</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/schedule">Schedule</a></li>
+                            
+                            <li class="nav-item"><a class="nav-link" href="/coach">Coaches</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/sport">Sport</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
