--- a/templates/index.html
+++ b/templates/index.html
@@ -7,46 +7,61 @@
 
 {% block main %}
 
-        <table class="table table-striped">
-            <thead>
-              <tr>
-                <th scope="col">Symbol</th>
-                <th scope="col">Name</th>
-                <th scope="col">Shares</th>
-                <th scope="col">Price</th>
-                <th scope="col">TOTAL</th>
-              </tr>
-            </thead>
-            <tbody>
-              
-              <tr>
-              <td>{{days}}</td>
-              <td> </td>
-              <td> </td>
-              <td> </td>
-              <td> </td>
+
+    <header>
+        <h1>Welcome {{admin[0].ad_username}}</h1>
+    </header>
+
+  
 
 
+<div class="custom-table"></div>
 
-              </tr>
-              
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>Cash</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>TOTAL</td>
-                <td></td>
-              </tr>
+ <table class="custom-table-right">
+  <h5 id="active-member">ACTIVE MEMBERS</h5>
+  <thead>
+    
+    <tr>
+      <th>name</th>
+      <th>phone number</th>
+      <th>sport</th>
+      <th>status</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for m in active_member %}
+  <tr class="table-row">
+    <td>
+      {{m.cl_Fname}} {{m.cl_Lname}}
+    </td>
+    <td>{{m.cl_num}}</td>
+    <td>
+      {{m.sp_name}}
+    </td>
+    <td> <span class="status-badge active-badge">active</span>
+    </td>
+  </tr>
+  {% endfor %}
+</tbody>
+ </table>
+  <!-- Add more rows as needed -->
 
-            </tbody>
-          </table>
+<div class="custom-table-left">
+  <table><tr>
+    <td coslpan="2"><h5 id="title">TODAY EVENTS  </h5> </td></tr><tr>
+      {% for event in current_events.values() %}
+      {% if event[0] == current_day %}
+      <tr><td>
+     <h6> {{event[1]}} :</h6></td><td class="time"> {{event[2]}}-{{event[3]}}</td>
+      </tr>                 
+     {% endif %}
+                     
+      
+      
+    
+  {% endfor %}</td></tr></table>
+</div>
+
 
 
 {% endblock %}
